# rag-eval-lite

./: README.md  pyproject.toml
rag_eval/: __init__.py  metrics.py
