[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval-lite"
version = "0.1.4"
description = "Lightweight evaluation metrics for RAG (Hit@k, Recall@k, Precision@k, MRR, nDCG, and more)"
authors = [
    { name = "Manu Yadav" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

keywords = ["rag", "evaluation", "retrieval", "genai", "llm"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/ManuSinghYadav/rag-eval-lite"

[tool.setuptools.packages.find]
where = ["."]